syntax = "proto3";

package proto;

import "define.proto";
import "server_only/config.server.proto";

option go_package = "./;proto";

message StopServerConfigNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10072;
    }
}

message NodeserverConnectedAndRegisteredNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10098;
    }

    uint32 nodeserver_id = 1;
}

message MultiPlayerMsg {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10012;
    }

    repeated uint32 uid_list = 1;
    bytes proto_bin = 2;
}

message AddGateserverNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10035;
    }

    uint32 listen_port = 1;
    uint32 outer_ip = 2;
    bool use_domain_name = 3;
    string domain_name = 4;
}

message RegisterServiceNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10007;
    }

    repeated ServiceType service_type_list = 1;
}

message PlayerTransferNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10021;
    }

    uint32 transfer_uid = 1;
    uint32 target_uid = 2;
    uint32 target_home_owner_uid = 3;
    uint32 target_home_gameserver_id = 4;
    uint32 target_home_param = 5;
}

message PacketCountInfo {
    uint32 cmd_id = 1;
    uint32 count = 2;
}

message PacketFreqencyExceedNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10003;
    }

    uint32 packet_count = 1;
    uint32 interval = 2;
    repeated PacketCountInfo packet_count_list = 3;
}

message SceneAsyncLoadGroupBatchNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10090;
    }
}

message CrcVersionConfig {
    repeated string client_version_list = 1;
}

message ClientVersionSyncNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10073;
    }

    DataVersionConfig data_version_config = 1;
    map<uint32, ResVersionConfig> res_version_config_map = 2;
    map<uint32, CrcVersionConfig> crc_version_config_map = 3;
    map<uint32, ResVersionConfig> next_res_version_config_map = 4;
}

message RegisterServiceSuccessNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10099;
    }
}

message ReloadConfigNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10031;
    }
}

message MultiserverServiceTypeNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10075;
    }

    repeated ServiceType service_type_list = 1;
}

message MatchServiceStopNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10048;
    }

    uint32 server_id = 1;
}

message MatchServiceStopImplementNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10097;
    }

    MatchServiceStopNotify msg = 1;
}

message ServerBlockPlayerMpNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10081;
    }

    bool is_unlock = 1;
    uint32 end_time = 2;
}

message ServerBlockPlayerChatNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10005;
    }

    bool is_unlock = 1;
    uint32 end_time = 2;
}

message ServerCheckSegmentCrcNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10082;
    }
}
